gke-ai-infgw/vllm-gemma3-4b.yaml
# Based on https://cloud.google.com/kubernetes-engine/docs/tutorials/serve-gemma-gpu-vllm#deploy-vllm
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-gemma-3-4b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-gemma-3-4b
  template:
    metadata:
      labels:
        app: vllm-gemma-3-4b
    spec:
      serviceAccountName: default
      containers:
        - name: inference-server
          image: vllm/vllm-openai:v0.8.5.post1  #v0.9.0 and newer have RuntimeError: Failed to infer device type
          resources:
            requests:
              cpu: "6"
              memory: "25Gi"
              ephemeral-storage: 10Gi
              nvidia.com/gpu: "1"
            limits:
              cpu: "6"
              memory: "25Gi"
              ephemeral-storage: 10Gi
              nvidia.com/gpu: "1"
          args:
            - --model=$(MODEL)
            - --tensor-parallel-size=1
            - --dtype=bfloat16
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          lifecycle:
            preStop:
              sleep:
                seconds: 30
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3600
            initialDelaySeconds: 2
            periodSeconds: 1
            httpGet:
              path: /health
              port: http
              scheme: HTTP
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-l4
---
apiVersion: v1
kind: Service
metadata:
  name: vllm-gemma-3-4b
spec:
  selector:
    app: vllm-gemma-3-4b
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
