gke-ai-infgw/vllm-llama3-3b.yaml
# Based on https://docs.cloud.google.com/kubernetes-engine/docs/tutorials/serve-gemma-gpu-vllm#deploy-vllm
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-llama-3-3b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-llama-3-3b
  strategy:
    type: Recreate  # Use this for faster updates when troubleshooting (but not in production)
  template:
    metadata:
      labels:
        app: vllm-llama-3-3b
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 15  # again faster troubleshooting but production should have better drain time
      containers:
        - name: inference-server
          image: vllm/vllm-openai:v0.8.5.post1  #v0.9.0 and newer have RuntimeError: Failed to infer device type
          resources:
            requests:
              cpu: "6"
              memory: "25Gi"
              ephemeral-storage: 25Gi
              nvidia.com/gpu: "1"
            limits:
              cpu: "6"
              memory: "25Gi"
              ephemeral-storage: 25Gi
              nvidia.com/gpu: "1"
          args:
            - --model=$(MODEL)
            - --tensor-parallel-size=1
            - --gpu-memory-utilization
            - "0.90"  # or 95-98 if want to use larger context window
            - --max-model-len
            - "16384" # or 32768. L4 doesn't seem to have enough memory for larger context.
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          lifecycle:
            preStop:
              sleep:
                seconds: 15   # Helps drain connections
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 10800 #3600
            initialDelaySeconds: 2
            periodSeconds: 1
            httpGet:
              path: /health
              port: http
              scheme: HTTP
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-l4
---
apiVersion: v1
kind: Service
metadata:
  name: vllm-llama-3-3b
spec:
  selector:
    app: vllm-llama-3-3b
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
