gke-ai-infgw/infgw-httproute-basic.yaml
# force HTTP to HTTPS redirect https://docs.cloud.google.com/kubernetes-engine/docs/how-to/deploying-gateways#configure_http-to-https_redirects
#kind: HTTPRoute
#apiVersion: gateway.networking.k8s.io/v1
#metadata:
#  name: http-to-https-redirect
#spec:
#  parentRefs:
#  - name: vllm-xlb
#    sectionName: http
#  rules:
#  - filters:
#    - type: RequestRedirect
#      requestRedirect:
#        scheme: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gemma-host-based-routing
spec:
  parentRefs:
    - name: vllm-xlb
      #sectionName: https  # Only bind on HTTPS listener
  hostnames:    # See: kubectl explain httproute.spec.hostnames
    - "1b.example.com"
    - "3b.example.com"
    - "4b.example.com"
    #- "*.example.com"   # Can also use wildcard instead of individual entries
  rules:
    # Check host header and route 4b to that service
    - matches:
      - headers:
        - name: host
          value: 4b.example.com
      backendRefs:
        - name: vllm-gemma-3-4b
          port: 8000
    # Check host header and route 3b to that service
    - matches:
      - headers:
        - name: host
          value: 3b.example.com
      backendRefs:
        - name: vllm-llama-3-3b
          port: 8000
    # Default to 1b model
    - backendRefs:
        - name: vllm-gemma-3-1b
          port: 8000
